<resources>
    <string name="app_name">ImgRocket</string>
    <string name="test">test</string>
    <string name="photo_permission">We need your photo permission</string>
    <string name="function">function</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noise_clear">clear noise</string>
    <string name="image_fix">fix image</string>
    <string name="rephoto">big!</string>
    <string name="image_turn">turn</string>
    <string name="image_cut">cut image</string>
    <string name="image_spin">spin image</string>
    <string name="processing">processing</string>
    <string name="my">my</string>
    <string name="choose_multi_photos">choose multi photos</string>
    <string name="no_storage_permission">You should give us storage permission.</string>
    <string name="disabled">disabled</string>
    <string name="user_image">user image</string>
    <string name="done">done</string>
    <string name="placeholder_string">placeholder</string>
    <string name="placeholder_number" translatable="false">123456789</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="login_with_other_app">Login with other APP</string>
    <string name="create_account">create account</string>
    <string name="forget_password">forget password</string>
    <string name="login_with_imgrocket_account">Login with Imgrocket account</string>
    <string name="this_function_is_unavailable">This function is unavailable now</string>
    <string name="please_choose_pictures">Please choose Pictures</string>
    <string name="create_your_imgrocket_account">create your Imgrocket account</string>
    <string name="sign_up">sign up</string>
    <string name="avatar">Avatar</string>
    <string name="exchange">Redemption Code</string>
    <string name="submit">submit</string>
    <string name="money">money</string>
    <string name="balance">balance</string>
    <string name="buy">buy</string>
</resources>
