<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_blur_off_black_24dp"
        android:shortcutDisabledMessage="@string/disabled"
        android:shortcutId="noise"
        android:shortcutLongLabel="@string/noise_clear"
        android:shortcutShortLabel="@string/noise_clear">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cn.imgrocket.imgrocket.ChooseSinglePhotoActivity"
            android:targetPackage="cn.imgrocket.imgrocket" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_healing_black_24dp"
        android:shortcutDisabledMessage="@string/disabled"
        android:shortcutId="fix"
        android:shortcutLongLabel="@string/image_fix"
        android:shortcutShortLabel="@string/image_fix">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cn.imgrocket.imgrocket.ChooseSinglePhotoActivity"
            android:targetPackage="cn.imgrocket.imgrocket" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_photo_filter_black_24dp"
        android:shortcutDisabledMessage="@string/disabled"
        android:shortcutId="mini"
        android:shortcutLongLabel="@string/rephoto"
        android:shortcutShortLabel="@string/rephoto">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cn.imgrocket.imgrocket.ChooseSinglePhotoActivity"
            android:targetPackage="cn.imgrocket.imgrocket" />
    </shortcut>


</shortcuts>