<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <com.getbase.floatingactionbutton.FloatingActionsMenu xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/file_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        fab:fab_addButtonColorNormal="@color/color_icon7"
        fab:fab_icon="@drawable/ic_add_black_24dp"
        fab:fab_labelStyle="@style/floatingActionsMenu_fab_style"
        fab:fab_labelsPosition="left">
        <!-- android:layout_marginBottom=56dp+16dp -->
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            app:fab_title="@string/noise_clear"
            fab:fab_colorNormal="@color/color_icon1"
            fab:fab_icon="@drawable/ic_blur_off_white_24dp"
            fab:fab_size="mini" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/color_icon2"
            fab:fab_icon="@drawable/ic_healing_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/image_fix" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/color_icon3"
            fab:fab_icon="@drawable/ic_photo_filter_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/rephoto" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/color_icon4"
            fab:fab_icon="@drawable/ic_repeat_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/image_turn" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/color_icon5"
            fab:fab_icon="@drawable/ic_crop_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/image_cut" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab_function6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/color_icon6"
            fab:fab_icon="@drawable/ic_cached_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/image_spin" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>
