<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:autofillHints="账号"
            android:gravity="center"
            android:hint="@string/account"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:autofillHints="密码"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/create_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/forget_password" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_text_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_layout_buttom"
        android:gravity="center"
        android:text="@string/login_with_other_app"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/login_layout_buttom"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/login_img_wechat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:src="@mipmap/ic_wechat"
            android:tint="@color/green"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/login_img_qq"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/login_img_wechat"
            android:padding="4dp"
            android:src="@mipmap/ic_qq"
            android:tint="@color/red"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/login_img_alipay"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/login_img_wechat"
            android:padding="4dp"
            android:src="@mipmap/ic_alipay"
            android:tint="@color/blue"
            tools:ignore="contentDescription" />
    </RelativeLayout>
</RelativeLayout>